@@ -22,25 +22,29 @@
                 <p align="center">Notice! This website is still under construction so some pages may be incomplete.</p> 
             </div>
             <!-- Bayes -->
-            <div align="center">
+            <div align="center" >
                 <h2 class="spacing_large" style="text-transform: none;">Naive Bayes Classifier Implementation</h2>
 
 
                 <!-- Classification -->
                 <h3 id="content_h3">Classification of Data</h3>
-                <p align="justify">
-                    A <b>classifier</b> is able to sort data in the appropriate categories based on a set of training data containing 
-                    information whose category membership is known. An example would be trying to figure out if a mail is spam or not a spam.
-                    Overall, classification is an example of pattern recognition.
-                </p>
+                <div id="bayes" align="left" style="margin-left: 10%; margin-right: 10%;">
+                    <p align="justify">
+                        A <b>classifier</b> is able to sort data in the appropriate categories based on a set of training data containing 
+                        information whose category membership is known. An example would be trying to figure out if a mail is spam or not a spam.
+                        Overall, classification is an example of pattern recognition.
+                    </p>
+                </div>
 
 
                 <!-- Naive Bayes Classifier -->
                 <h3 id="content_h3">What is a Naive Bayes Classifier? </h3>
-                <p align="justify">
-                    <b>Naive Bayes Classifier</b> is a probabilistic classifier that can sort data into the appropriate 
-                    categories using Bayes' Theorem.The Bayes' theorem is shown below.
-                </p>
+                <div id="bayes" align="left" style="margin-left: 10%; margin-right: 10%;">
+                    <p align="justify">
+                        <b>Naive Bayes Classifier</b> is a probabilistic classifier that can sort data into the appropriate 
+                        categories using Bayes' Theorem.The Bayes' theorem is shown below.
+                    </p>
+                </div>
                 <img src="https://dmctruong.000webhostapp.com/images/bayes_theorem.png" style="width: 600px; padding: 30px">
 
 
@@ -54,8 +58,8 @@
                 <!-- What can it be used for? -->
                 <div style="padding: 50px;">
                     <h3 id="content_h3">What can it be used for?</h3>
-                    <p>A classifier can be used for many things. But to name a few, a classifier may be used for: </p>
-                    <div id="bayes" align="left" style="margin-left: 30%;">
+                    <div id="bayes" align="left" style="margin-left: 10%;">
+                        <p>A classifier can be used for many things. But to name a few, a classifier may be used for: </p>
                         <ul>
                             <li>Machine Learning</li>
                             <li>Data Mining</li>
@@ -64,17 +68,31 @@
                         </ul>
                     </div>
 
-                    <div> <!-- Installation -->
-                        <h3 id="content_h3" >Installation</h3>
-                        <p>To install the program, download then compile it.</p>
-                        <!-- Download at GitHub-->
+                    <!-- Installation -->
+                    <h3 id="content_h3" >Installation</h3>
+                    <div id="bayes" align="left" style="margin-left: 10%;">
+                        <p>To install the program:</p>
+                        <ol>
+                            <li>Make sure that you have <a href="https://www.java.com/en/download/win10.jsp">Java installed</a>. </li>
+                            <li>Download the program from GitHub.</li>
+                            <li>Extract the files into a folder of your choosing.</li>
+                        </ol>
                         <p align="center">Be sure to check out the instructions in the README if you would like to download.</p>
+                    </div>
+                    <!-- Download at GitHub-->
+                    <div>
                         <a href="https://github.com/DMCTruong/Naive-Bayes-Classifier" class="download_a"><button class="download" align="center">Download at GitHub</button></a>     
                     </div>
 
-                    <div> <!-- Usage -->
-                        <h3 id="content_h3">Usage</h3>
-                        <p>Make sure the sample text file is in the same folder, run it, then choose option 1 or 2 then watch it run.</p>
+                    <!-- Usage -->
+                    <h3 id="content_h3">Usage</h3>
+                    <div id="bayes" align="left" style="margin-left: 10%;"> 
+                        <p>To use the program:</p>
+                        <ol>
+                            <li>Compile the program using an IDE or a command line </li>
+                            <li>Make sure the sample text files are in the same folder with the .class file after compiling.</li>
+                            <li>Run the program and follow the instructions as it runs.</li>
+                        </ol>
                     </div>
 
                     <div> <!-- Support -->
